# diem-exp-setup

./: .gitignore  Cargo.toml  README.md  build_diem.sh  move_link.sh  test_validators
diem-exp-client/: Cargo.toml
diem-exp-client/src/: main.rs
setup-cluster/: Cargo.toml
setup-cluster/src/: main.rs
src/: main.rs
