[package]
name = "setup-cluster"
version = "0.1.0"
edition = "2024"

[dependencies]
bcs = "0.1.2"
diem-crypto = { git = "https://github.com/diem/diem", rev = "94a8bca0f" }
rand = "0"
serde_json = "1"
serde = { version = "1", default-features = false }
base64 = "0.13.0"
toml = "0"
serde_yaml = "0.8.17"
